Simplified language set up for charts

--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -209,6 +209,174 @@
         "Chiron": "凱龍星",
         "Mean_Lilith": "黑月亮"
       }
+    },
+    "ES": {
+      "info": "Información",
+      "cusp": "Casa",
+      "longitude": "Longitud",
+      "latitude": "Latitud",
+      "north": "Norte",
+      "east": "Este",
+      "south": "Sur",
+      "west": "Oeste",
+      "fire": "Fuego",
+      "earth": "Tierra",
+      "air": "Aire",
+      "water": "Agua",
+      "and_word": "y",
+      "transits": "Tránsitos para",
+      "type": "Tipo",
+      "aspects": "Aspectos de la pareja",
+      "planets_and_house": "Puntos para",
+      "transit_name": "En el momento del tránsito",
+      "lunar_phase": "Fase lunar",
+      "day": "Día",
+      "celestial_points": {
+        "Sun": "Sol",
+        "Moon": "Luna",
+        "Mercury": "Mercurio",
+        "Venus": "Venus",
+        "Mars": "Marte",
+        "Jupiter": "Júpiter",
+        "Saturn": "Saturno",
+        "Uranus": "Urano",
+        "Neptune": "Neptuno",
+        "Pluto": "Plutón",
+        "Asc": "Asc",
+        "Mc": "Mc",
+        "Dsc": "Dsc",
+        "Ic": "Ic",
+        "True_Node": "Nodo Norte",
+        "Mean_Node": "Nodo Medio",
+        "Chiron": "Quirón",
+        "Mean_Lilith": "Lilith"
+      }
+    },
+    "RU": {
+      "info": "Информация",
+      "cusp": "Дом",
+      "longitude": "Долгота",
+      "latitude": "Широта",
+      "north": "Север",
+      "east": "Восток",
+      "south": "Юг",
+      "west": "Запад",
+      "fire": "Огонь",
+      "earth": "Земля",
+      "air": "Воздух",
+      "water": "Вода",
+      "and_word": "и",
+      "transits": "Транзиты для",
+      "type": "Тип",
+      "aspects": "Аспекты пары",
+      "planets_and_house": "Пункты для",
+      "transit_name": "В момент транзита",
+      "lunar_phase": "Лунная фаза",
+      "day": "День",
+      "celestial_points": {
+        "Sun": "Солнце",
+        "Moon": "Луна",
+        "Mercury": "Меркурий",
+        "Venus": "Венера",
+        "Mars": "Марс",
+        "Jupiter": "Юпитер",
+        "Saturn": "Сатурн",
+        "Uranus": "Уран",
+        "Neptune": "Нептун",
+        "Pluto": "Плутон",
+        "Asc": "Асц",
+        "Mc": "MC",
+        "Dsc": "ДСЦ",
+        "Ic": "IC",
+        "True_Node": "Северный узел",
+        "Mean_Node": "Средний узел",
+        "Chiron": "Хирон",
+        "Mean_Lilith": "Лилит"
+      }
+    },
+    "TR": {
+      "info": "Bilgi",
+      "cusp": "Ev",
+      "longitude": "Boylam",
+      "latitude": "Enlem",
+      "north": "Kuzey",
+      "east": "Doğu",
+      "south": "Güney",
+      "west": "Batı",
+      "fire": "Ateş",
+      "earth": "Toprak",
+      "air": "Hava",
+      "water": "Su",
+      "and_word": "ve",
+      "transits": "Geçişler için",
+      "type": "Tür",
+      "aspects": "Çiftin Açılar",
+      "planets_and_house": "Puanlar için",
+      "transit_name": "Geçiş anında",
+      "lunar_phase": "Ay Aşaması",
+      "day": "Gün",
+      "celestial_points": {
+        "Sun": "Güneş",
+        "Moon": "Ay",
+        "Mercury": "Merkür",
+        "Venus": "Venüs",
+        "Mars": "Mars",
+        "Jupiter": "Jüpiter",
+        "Saturn": "Satürn",
+        "Uranus": "Uranüs",
+        "Neptune": "Neptün",
+        "Pluto": "Plüton",
+        "Asc": "Yükselen",
+        "Mc": "MC",
+        "Dsc": "İK",
+        "Ic": "IC",
+        "True_Node": "Kuzey Düğümü",
+        "Mean_Node": "Ortalama Düğüm",
+        "Chiron": "Kiron",
+        "Mean_Lilith": "Lilith"
+      }
+    },
+    "DE": {
+      "info": "Informationen",
+      "cusp": "Haus",
+      "longitude": "Längengrad",
+      "latitude": "Breitengrad",
+      "north": "Norden",
+      "east": "Osten",
+      "south": "Süden",
+      "west": "Westen",
+      "fire": "Feuer",
+      "earth": "Erde",
+      "air": "Luft",
+      "water": "Wasser",
+      "and_word": "und",
+      "transits": "Transite für",
+      "type": "Typ",
+      "aspects": "Aspekte des Paares",
+      "planets_and_house": "Punkte für",
+      "transit_name": "Zum Zeitpunkt des Transits",
+      "lunar_phase": "Mondphase",
+      "day": "Tag",
+      "celestial_points": {
+        "Sun": "Sonne",
+        "Moon": "Mond",
+        "Mercury": "Merkur",
+        "Venus": "Venus",
+        "Mars": "Mars",
+        "Jupiter": "Jupiter",
+        "Saturn": "Saturn",
+        "Uranus": "Uranus",
+        "Neptune": "Neptun",
+        "Pluto": "Pluto",
+        "Asc": "Asz",
+        "Mc": "MC",
+        "Dsc": "DSC",
+        "Ic": "IC",
+        "True_Node": "Wahrer Mondknoten",
+        "Mean_Node": "Mittlerer Mondknoten",
+        "Chiron": "Chiron",
+        "Mean_Lilith": "Lilith"
+      }
     }
   },
   "aspects": [
