--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -384,9 +384,7 @@
       "degree": 0,
       "name": "conjunction",
       "is_active": 1,
-      "visible_grid": 1,
-      "is_major": 1,
-      "is_minor": 0,
+
       "orb": 10,
       "color": "var(--kerykeion-chart-color-conjunction)"
     },
@@ -394,9 +392,6 @@
       "degree": 30,
       "name": "semi-sextile",
       "is_active": 0,
-      "visible_grid": 0,
-      "is_major": 0,
-      "is_minor": 1,
       "orb": 1,
       "color": "var(--kerykeion-chart-color-semi-sextile)"
     },
@@ -404,9 +399,6 @@
       "degree": 45,
       "name": "semi-square",
       "is_active": 0,
-      "visible_grid": 0,
-      "is_major": 0,
-      "is_minor": 1,
       "orb": 1,
       "color": "var(--kerykeion-chart-color-semi-square)"
     },
@@ -414,9 +406,6 @@
       "degree": 60,
       "name": "sextile",
       "is_active": 1,
-      "visible_grid": 1,
-      "is_major": 1,
-      "is_minor": 0,
       "orb": 6,
       "color": "var(--kerykeion-chart-color-sextile)"
     },
@@ -424,9 +413,6 @@
       "degree": 72,
       "name": "quintile",
       "is_active": 1,
-      "visible_grid": 1,
-      "is_major": 0,
-      "is_minor": 1,
       "orb": 1,
       "color": "var(--kerykeion-chart-color-quintile)"
     },
@@ -434,9 +420,6 @@
       "degree": 90,
       "name": "square",
       "is_active": 1,
-      "visible_grid": 1,
-      "is_major": 1,
-      "is_minor": 0,
       "orb": 5,
       "color": "var(--kerykeion-chart-color-square)"
     },
@@ -444,9 +427,6 @@
       "degree": 120,
       "name": "trine",
       "is_active": 1,
-      "visible_grid": 1,
-      "is_major": 1,
-      "is_minor": 0,
       "orb": 8,
       "color": "var(--kerykeion-chart-color-trine)"
     },
@@ -454,9 +434,6 @@
       "degree": 135,
       "name": "sesquiquadrate",
       "is_active": 0,
-      "visible_grid": 0,
-      "is_major": 0,
-      "is_minor": 1,
       "orb": 1,
       "color": "var(--kerykeion-chart-color-sesquiquadrate)"
     },
@@ -464,9 +441,6 @@
       "degree": 144,
       "name": "biquintile",
       "is_active": 0,
-      "visible_grid": 0,
-      "is_major": 0,
-      "is_minor": 1,
       "orb": 1,
       "color": "var(--kerykeion-chart-color-biquintile)"
     },
@@ -474,9 +448,6 @@
       "degree": 150,
       "name": "quincunx",
       "is_active": 0,
-      "visible_grid": 0,
-      "is_major": 0,
-      "is_minor": 0,
       "orb": 1,
       "color": "var(--kerykeion-chart-color-quincunx)"
     },
@@ -484,9 +455,6 @@
       "degree": 180,
       "name": "opposition",
       "is_active": 1,
-      "visible_grid": 1,
-      "is_major": 1,
-      "is_minor": 0,
       "orb": 10,
       "color": "var(--kerykeion-chart-color-opposition)"
     }
@@ -696,12 +664,6 @@
     "lunar_phase_1": "var(--kerykeion-chart-color-lunar-phase-1)"
   },
   "general_settings": {
-    "axes_orbit": 1,
-    "planet_in_zodiac_extra_points": 10,
-    "language": "EN"
-  },
-  "chart_settings": {
-    "basic_chart_viewBox": "0 0 772.2 546.0",
-    "wide_chart_viewBox": "0 0 1060 546.0"
+    "axes_orbit": 1
   }
 }
