--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -36,8 +36,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "North Node",
-        "Mean_Node": "Mean Node",
+        "True_North_Node": "True North Node",
+        "Mean_North_Node": "Mean North Node",
+        "True_South_Node": "True South Node",
+        "Mean_South_Node": "Mean South Node",
         "Chiron": "Chiron",
         "Mean_Lilith": "Lilith"
       }
@@ -78,8 +80,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "Noeud Nord",
-        "Mean_Node": "Noeud Moyen",
+        "True_North_Node": "Noeud Nord Vrai",
+        "Mean_North_Node": "Noeud Nord Moyen",
+        "True_South_Node": "Noeud Sud Vrai",
+        "Mean_South_Node": "Noeud Sud Moyen",        
         "Chiron": "Chiron",
         "Mean_Lilith": "Lilith"
       }
@@ -120,8 +124,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "Nodo Norte",
-        "Mean_Node": "Nodo Médio",
+        "True_North_Node": "Nodo Norte Verdadeiro",
+        "Mean_North_Node": "Nodo Norte Médio",
+        "True_South_Node": "Nodo Sul Verdadeiro",
+        "Mean_South_Node": "Nodo Sul Médio",      
         "Chiron": "Quíron",
         "Mean_Lilith": "Lilith"
       }
@@ -162,8 +168,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "Nodo Nord",
-        "Mean_Node": "Nodo Medio",
+        "True_North_Node": "Nodo Nord Vero",
+        "Mean_North_Node": "Nodo Nord Medio",
+        "True_South_Node": "Nodo Sud Vero",
+        "Mean_South_Node": "Nodo Sud Medio",      
         "Chiron": "Chirone",
         "Mean_Lilith": "Lilith"
       }
@@ -204,8 +212,10 @@
         "Mc": "上中天",
         "Dsc": "下降點",
         "Ic": "下中天",
-        "True_Node": "北交點",
-        "Mean_Node": "平交點",
+        "True_North_Node": "真北交点",
+        "Mean_North_Node": "平均北交点",
+        "True_South_Node": "真南交点",
+        "Mean_South_Node": "平均南交点",  
         "Chiron": "凱龍星",
         "Mean_Lilith": "黑月亮"
       }
@@ -246,8 +256,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "Nodo Norte",
-        "Mean_Node": "Nodo Medio",
+        "True_North_Node": "Nodo Norte Verdadero",
+        "Mean_North_Node": "Nodo Norte Medio",
+        "True_South_Node": "Nodo Sur Verdadero",
+        "Mean_South_Node": "Nodo Sur Medio",            
         "Chiron": "Quirón",
         "Mean_Lilith": "Lilith"
       }
@@ -288,8 +300,10 @@
         "Mc": "MC",
         "Dsc": "ДСЦ",
         "Ic": "IC",
-        "True_Node": "Северный узел",
-        "Mean_Node": "Средний узел",
+        "True_North_Node": "Истинный Северный Узел",
+        "Mean_North_Node": "Средний Северный Узел",
+        "True_South_Node": "Истинный Южный Узел",
+        "Mean_South_Node": "Средний Южный Узел",    
         "Chiron": "Хирон",
         "Mean_Lilith": "Лилит"
       }
@@ -330,8 +344,10 @@
         "Mc": "MC",
         "Dsc": "İK",
         "Ic": "IC",
-        "True_Node": "Kuzey Düğümü",
-        "Mean_Node": "Ortalama Düğüm",
+        "True_North_Node": "Gerçek Kuzey Düğümü",
+        "Mean_North_Node": "Ortalama Kuzey Düğümü",
+        "True_South_Node": "Gerçek Güney Düğümü",
+        "Mean_South_Node": "Ortalama Güney Düğümü",    
         "Chiron": "Kiron",
         "Mean_Lilith": "Lilith"
       }
@@ -372,8 +388,10 @@
         "Mc": "MC",
         "Dsc": "DSC",
         "Ic": "IC",
-        "True_Node": "Wahrer Mondknoten",
-        "Mean_Node": "Mittlerer Mondknoten",
+        "True_North_Node": "Wahrer nördlicher Mondknoten",
+        "Mean_North_Node": "Mittlerer nördlicher Mondknoten",
+        "True_South_Node": "Wahrer südlicher Mondknoten",
+        "Mean_South_Node": "Mittlerer südlicher Mondknoten",            
         "Chiron": "Chiron",
         "Mean_Lilith": "Lilith"
       }
@@ -414,8 +432,10 @@
         "Mc": "एमसी",
         "Dsc": "डीएससी",
         "Ic": "आईसी",
-        "True_Node": "सत्य चंद्र नोड",
-        "Mean_Node": "औसत चंद्र नोड",
+        "True_North_Node": "सच्चा उत्तर नोड",
+        "Mean_North_Node": "माध्य उत्तर नोड",
+        "True_South_Node": "सच्चा दक्षिण नोड",
+        "Mean_South_Node": "माध्य दक्षिण नोड",              
         "Chiron": "चिरोन",
         "Mean_Lilith": "लिलिथ"
       }
@@ -604,24 +624,42 @@
     },
     {
       "id": 10,
-      "name": "Mean_Node",
-      "color": "var(--kerykeion-chart-color-mean-node)",
+      "name": "Mean_North_Node",
+      "color": "var(--kerykeion-chart-color-mean-north-node)",
       "is_active": false,
       "element_points": 0,
       "related_zodiac_signs": [],
-      "label": "Mean_Node"
+      "label": "Mean_North_Node"
     },
     {
       "id": 11,
-      "name": "True_Node",
-      "color": "var(--kerykeion-chart-color-true-node)",
+      "name": "True_North_Node",
+      "color": "var(--kerykeion-chart-color-true-north-node)",
       "is_active": true,
       "element_points": 0,
       "related_zodiac_signs": [],
-      "label": "True_Node"
+      "label": "True_North_Node"
     },
     {
       "id": 12,
+      "name": "Mean_South_Node",
+      "color": "var(--kerykeion-chart-color-mean-south-node)",
+      "is_active": false,
+      "element_points": 0,
+      "related_zodiac_signs": [],
+      "label": "Mean_South_Node"
+    },
+    {
+      "id": 13,
+      "name": "True_South_Node",
+      "color": "var(--kerykeion-chart-color-true-south-node)",
+      "is_active": true,
+      "element_points": 0,
+      "related_zodiac_signs": [],
+      "label": "True_South_Node"
+    },    
+    {
+      "id": 14,
       "name": "Chiron",
       "color": "var(--kerykeion-chart-color-chiron)",
       "is_active": true,
@@ -630,7 +668,7 @@
       "label": "Chiron"
     },
     {
-      "id": 13,
+      "id": 15,
       "name": "First_House",
       "color": "var(--kerykeion-chart-color-first-house)",
       "is_active": true,
@@ -639,7 +677,7 @@
       "label": "Asc"
     },
     {
-      "id": 14,
+      "id": 16,
       "name": "Tenth_House",
       "color": "var(--kerykeion-chart-color-tenth-house)",
       "is_active": true,
@@ -648,7 +686,7 @@
       "label": "Mc"
     },
     {
-      "id": 15,
+      "id": 17,
       "name": "Seventh_House",
       "color": "var(--kerykeion-chart-color-seventh-house)",
       "is_active": false,
@@ -657,7 +695,7 @@
       "label": "Dsc"
     },
     {
-      "id": 16,
+      "id": 18,
       "name": "Fourth_House",
       "color": "var(--kerykeion-chart-color-fourth-house)",
       "is_active": false,
@@ -666,7 +704,7 @@
       "label": "Ic"
     },
     {
-      "id": 17,
+      "id": 19,
       "name": "Mean_Lilith",
       "color": "var(--kerykeion-chart-color-mean-lilith)",
       "is_active": true,
