--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -36,12 +36,12 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "True N. Node",
-        "Mean_Node": "Mean N. Node",
+        "True_Node": "North Node (T)",
+        "Mean_Node": "North Node (M)",
         "Chiron": "Chiron",
         "Mean_Lilith": "Lilith",
-        "True_South_Node": "True S. Node",
-        "Mean_South_Node": "Mean S. Node"
+        "True_South_Node": "South Node (T)",
+        "Mean_South_Node": "South Node (M)"
       }
     },
     "FR": {
@@ -80,10 +80,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "Noeud Nord Vrai",
-        "Mean_Node": "Noeud Nord Moyen",
-        "True_South_Node": "Noeud Sud Vrai",
-        "Mean_South_Node": "Noeud Sud Moyen",
+        "True_Node": "Nœud Nord (V)",
+        "Mean_Node": "Nœud Nord (M)",
+        "True_South_Node": "Nœud Sud (V)",
+        "Mean_South_Node": "Nœud Sud (M)",
         "Chiron": "Chiron",
         "Mean_Lilith": "Lilith"
       }
@@ -124,10 +124,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "N. Norte V.",
-        "Mean_Node": "N. Norte M.",
-        "True_South_Node": "N. Sul V.",
-        "Mean_South_Node": "N. Sul M.",
+        "True_Node": "N. Norte (V)",
+        "Mean_Node": "N. Norte (M)",
+        "True_South_Node": "N. Sul (V)",
+        "Mean_South_Node": "N. Sul (M)",
         "Chiron": "Quíron",
         "Mean_Lilith": "Lilith"
       }
@@ -168,10 +168,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "Nodo Nord Vero",
-        "Mean_Node": "Nodo Nord Medio",
-        "True_South_Node": "Nodo Sud Vero",
-        "Mean_South_Node": "Nodo Sud Medio",
+        "True_Node": "Nodo Nord (V)",
+        "Mean_Node": "Nodo Nord (M)",
+        "True_South_Node": "Nodo Sud (V)",
+        "Mean_South_Node": "Nodo Sud (M)",
         "Chiron": "Chirone",
         "Mean_Lilith": "Lilith"
       }
@@ -256,10 +256,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "N. Norte Ver.",
-        "Mean_Node": "N. Norte Med.",
-        "True_South_Node": "N. Sur Ver.",
-        "Mean_South_Node": "N. Sur Med.",
+        "True_Node": "Nodo Norte (V)",
+        "Mean_Node": "Nodo Norte (M)",
+        "True_South_Node": "Nodo Sur (V)",
+        "Mean_South_Node": "No de Sur (M)",
         "Chiron": "Quirón",
         "Mean_Lilith": "Lilith"
       }
@@ -300,10 +300,10 @@
         "Mc": "MC",
         "Dsc": "ДСЦ",
         "Ic": "IC",
-        "True_Node": "И. С. У.",
-        "Mean_Node": "Ср. С. У.",
-        "True_South_Node": "И. Ю. У.",
-        "Mean_South_Node": "Ср. Ю. У.",
+        "True_Node": "Северный Узел (И)",
+        "Mean_Node": "Северный Узел (С)",
+        "True_South_Node": "Южный Узел (И)",
+        "Mean_South_Node": "Южный Узел (С)",
         "Chiron": "Хирон",
         "Mean_Lilith": "Лилит"
       }
@@ -344,12 +344,12 @@
         "Mc": "MC",
         "Dsc": "İK",
         "Ic": "IC",
-        "True_Node": "G. K. D.",
-        "Mean_Node": "O. K. D.",
-        "True_South_Node": "G. G. D.",
-        "Mean_South_Node": "O. G. D.",
-        "Chiron": "Kiron",
-        "Mean_Lilith": "Lilith"
+        "True_Node": "Kuzey Düğümü (T)",
+        "Mean_Node": "Kuzey Düğümü (M)",
+        "Chiron": "Kirony",
+        "Mean_Lilith": "Lilith",
+        "True_South_Node": "Güney Düğümü (T)",
+        "Mean_South_Node": "Güney Düğümü (M)"
       }
     },
     "DE": {
@@ -388,10 +388,10 @@
         "Mc": "MC",
         "Dsc": "DSC",
         "Ic": "IC",
-        "True_Node": "W. n. MK",
-        "Mean_Node": "M. n. MK",
-        "True_South_Node": "W. s. MK",
-        "Mean_South_Node": "M. s. MK",
+        "True_Node": "Nordknoten (T)",
+        "Mean_Node": "Nordknoten (M)",
+        "True_South_Node": "Südknoten (T)",
+        "Mean_South_Node": "Südknoten (M)",
         "Chiron": "Chiron",
         "Mean_Lilith": "Lilith"
       }
@@ -432,12 +432,12 @@
         "Mc": "एमसी",
         "Dsc": "डीएससी",
         "Ic": "आईसी",
-        "True_Node": "सच्चा उ. नोड",
-        "Mean_Node": "माध्य उ. नोड",
-        "True_South_Node": "सच्चा द. नोड",
-        "Mean_South_Node": "माध्य द. नोड",
-        "Chiron": "चिरोन",
-        "Mean_Lilith": "लिलिथ"
+        "True_Node": "उत्तर नोड (T)",
+        "Mean_Node": "उत्तर नोड (M)",
+        "Chiron": "किरोन",
+        "Mean_Lilith": "लिलिथ",
+        "True_South_Node": "दक्षिण नोड (T)",
+        "Mean_South_Node": "दक्षिण नोड (M)"
       }
     }
   },
