--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -36,12 +36,12 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "North Node (T)",
-        "Mean_Node": "North Node (M)",
+        "True_Node": "N. Node (T)",
+        "Mean_Node": "N. Node (M)",
         "Chiron": "Chiron",
         "Mean_Lilith": "Lilith",
-        "True_South_Node": "South Node (T)",
-        "Mean_South_Node": "South Node (M)"
+        "True_South_Node": "S. Node (T)",
+        "Mean_South_Node": "S. Node (M)"
       }
     },
     "FR": {
@@ -80,10 +80,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "Nœud Nord (V)",
-        "Mean_Node": "Nœud Nord (M)",
-        "True_South_Node": "Nœud Sud (V)",
-        "Mean_South_Node": "Nœud Sud (M)",
+        "True_Node": "Nœud N. (V)",
+        "Mean_Node": "Nœud N. (M)",
+        "True_South_Node": "Nœud S. (V)",
+        "Mean_South_Node": "Nœud S. (M)",
         "Chiron": "Chiron",
         "Mean_Lilith": "Lilith"
       }
@@ -124,10 +124,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "N. Norte (V)",
-        "Mean_Node": "N. Norte (M)",
-        "True_South_Node": "N. Sul (V)",
-        "Mean_South_Node": "N. Sul (M)",
+        "True_Node": "Nodo N. (V)",
+        "Mean_Node": "Nodo N. (M)",
+        "True_South_Node": "Nodo S. (V)",
+        "Mean_South_Node": "Nodo S. (M)",
         "Chiron": "Quíron",
         "Mean_Lilith": "Lilith"
       }
@@ -168,10 +168,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "Nodo Nord (V)",
-        "Mean_Node": "Nodo Nord (M)",
-        "True_South_Node": "Nodo Sud (V)",
-        "Mean_South_Node": "Nodo Sud (M)",
+        "True_Node": "Nodo N. (V)",
+        "Mean_Node": "Nodo N. (M)",
+        "True_South_Node": "Nodo S. (V)",
+        "Mean_South_Node": "Nodo S. (M)",
         "Chiron": "Chirone",
         "Mean_Lilith": "Lilith"
       }
@@ -256,10 +256,10 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "True_Node": "Nodo Norte (V)",
-        "Mean_Node": "Nodo Norte (M)",
-        "True_South_Node": "Nodo Sur (V)",
-        "Mean_South_Node": "No de Sur (M)",
+        "True_Node": "Nodo N. (V)",
+        "Mean_Node": "Nodo N. (M)",
+        "True_South_Node": "Nodo S. (V)",
+        "Mean_South_Node": "Nodo S. (M)",
         "Chiron": "Quirón",
         "Mean_Lilith": "Lilith"
       }
@@ -300,10 +300,10 @@
         "Mc": "MC",
         "Dsc": "ДСЦ",
         "Ic": "IC",
-        "True_Node": "Северный Узел (И)",
-        "Mean_Node": "Северный Узел (С)",
-        "True_South_Node": "Южный Узел (И)",
-        "Mean_South_Node": "Южный Узел (С)",
+        "True_Node": "С. Узел (И)",
+        "Mean_Node": "С. Узел (С)",
+        "True_South_Node": "Ю. Узел (И)",
+        "Mean_South_Node": "Ю. Узел (С)",
         "Chiron": "Хирон",
         "Mean_Lilith": "Лилит"
       }
@@ -344,12 +344,12 @@
         "Mc": "MC",
         "Dsc": "İK",
         "Ic": "IC",
-        "True_Node": "Kuzey Düğümü (T)",
-        "Mean_Node": "Kuzey Düğümü (M)",
+        "True_Node": "K. Düğümü (T)",
+        "Mean_Node": "K. Düğümü (M)",
         "Chiron": "Kirony",
         "Mean_Lilith": "Lilith",
-        "True_South_Node": "Güney Düğümü (T)",
-        "Mean_South_Node": "Güney Düğümü (M)"
+        "True_South_Node": "G. Düğümü (T)",
+        "Mean_South_Node": "G. Düğümü (M)"
       }
     },
     "DE": {
@@ -590,7 +590,7 @@
       "id": 6,
       "name": "Saturn",
       "color": "var(--kerykeion-chart-color-saturn)",
-      "is_active": false,
+      "is_active": true,
       "element_points": 10,
       "related_zodiac_signs": ["9"],
       "label": "Saturn"
@@ -626,7 +626,7 @@
       "id": 10,
       "name": "Mean_Node",
       "color": "var(--kerykeion-chart-color-mean-node)",
-      "is_active": false,
+      "is_active": true,
       "element_points": 0,
       "related_zodiac_signs": [],
       "label": "Mean_Node"
@@ -635,7 +635,7 @@
       "id": 11,
       "name": "True_Node",
       "color": "var(--kerykeion-chart-color-true-node)",
-      "is_active": true,
+      "is_active": false,
       "element_points": 0,
       "related_zodiac_signs": [],
       "label": "True_Node"
@@ -698,7 +698,7 @@
       "id": 18,
       "name": "Mean_South_Node",
       "color": "var(--kerykeion-chart-color-mean-node)",
-      "is_active": false,
+      "is_active": true,
       "element_points": 0,
       "related_zodiac_signs": [],
       "label": "Mean_South_Node"
@@ -707,7 +707,7 @@
       "id": 19,
       "name": "True_South_Node",
       "color": "var(--kerykeion-chart-color-true-node)",
-      "is_active": true,
+      "is_active": false,
       "element_points": 0,
       "related_zodiac_signs": [],
       "label": "True_South_Node"
