--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ pydantic = "^2.5"
 terminaltables = "^3.1.10"
 scour = "^0.38.2"
 requests-cache = "^1.2.1"
+requests = "^2.32.3"
 cairosvg = "^2.7.1"
 
 [tool.poetry.scripts]
