Added calculation of AC/DC and MC/IC axes

--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -22,6 +22,10 @@
       "lunar_phase": "Lunar phase",
       "day": "Day",
       "celestial_points": {
+        "Ascendant": "Asc",
+        "Descendant": "Desc",
+        "Medium_Coeli": "MC",
+        "Imum_Coeli": "IC",
         "Sun": "Sun",
         "Moon": "Moon",
         "Mercury": "Mercury",
@@ -66,6 +70,10 @@
       "lunar_phase": "Phase Lunaire",
       "day": "Jour",
       "celestial_points": {
+        "Ascendant": "Asc",
+        "Descendant": "Desc",
+        "Medium_Coeli": "MC",
+        "Imum_Coeli": "FC",
         "Sun": "Soleil",
         "Moon": "Lune",
         "Mercury": "Mercure",
@@ -110,6 +118,10 @@
       "lunar_phase": "Fase lunar",
       "day": "Dia",
       "celestial_points": {
+        "Ascendant": "Asc",
+        "Descendant": "Desc",
+        "Medium_Coeli": "MC",
+        "Imum_Coeli": "FC",
         "Sun": "Sol",
         "Moon": "Lua",
         "Mercury": "Mercúrio",
@@ -154,6 +166,10 @@
       "lunar_phase": "Fase lunare",
       "day": "Giorno",
       "celestial_points": {
+        "Ascendant": "Asc",
+        "Descendant": "Disc",
+        "Medium_Coeli": "MC",
+        "Imum_Coeli": "IC",
         "Sun": "Sole",
         "Moon": "Luna",
         "Mercury": "Mercurio",
@@ -198,6 +214,10 @@
       "lunar_phase": "月相",
       "day": "日",
       "celestial_points": {
+        "Ascendant": "上升点 ",
+        "Descendant": "下降点",
+        "Medium_Coeli": "天顶",
+        "Imum_Coeli": "天底",
         "Sun": "太陽",
         "Moon": "月亮",
         "Mercury": "水星",
@@ -242,6 +262,10 @@
       "lunar_phase": "Fase lunar",
       "day": "Día",
       "celestial_points": {
+        "Ascendant": "Asc ",
+        "Descendant": "Desc",
+        "Medium_Coeli": "MC",
+        "Imum_Coeli": "FC",
         "Sun": "Sol",
         "Moon": "Luna",
         "Mercury": "Mercurio",
@@ -286,6 +310,10 @@
       "lunar_phase": "Лунная фаза",
       "day": "День",
       "celestial_points": {
+        "Ascendant": "Асц ",
+        "Descendant": "Десц",
+        "Medium_Coeli": "МЦ",
+        "Imum_Coeli": "ИЦ",
         "Sun": "Солнце",
         "Moon": "Луна",
         "Mercury": "Меркурий",
@@ -330,6 +358,10 @@
       "lunar_phase": "Ay Aşaması",
       "day": "Gün",
       "celestial_points": {
+        "Ascendant": "Asc ",
+        "Descendant": "Desc",
+        "Medium_Coeli": "MC",
+        "Imum_Coeli": "IC",
         "Sun": "Güneş",
         "Moon": "Ay",
         "Mercury": "Merkür",
@@ -374,6 +406,10 @@
       "lunar_phase": "Mondphase",
       "day": "Tag",
       "celestial_points": {
+        "Ascendant": "Asc ",
+        "Descendant": "Desc",
+        "Medium_Coeli": "MC",
+        "Imum_Coeli": "IC",
         "Sun": "Sonne",
         "Moon": "Mond",
         "Mercury": "Merkur",
@@ -418,6 +454,10 @@
       "lunar_phase": "चंद्र चरण",
       "day": "दिन",
       "celestial_points": {
+        "Ascendant": "Asc",
+        "Descendant": "Desc",
+        "Medium_Coeli": "MC",
+        "Imum_Coeli": "IC",
         "Sun": "सूर्य",
         "Moon": "चंद्रमा",
         "Mercury": "बुध",
@@ -711,6 +751,42 @@
       "element_points": 0,
       "related_zodiac_signs": [],
       "label": "True_South_Node"
+    },
+    {
+      "id": 20,
+      "name": "Ascendant",
+      "color": "var(--kerykeion-chart-color-asc)",
+      "is_active": false,
+      "element_points": 0,
+      "related_zodiac_signs": [],
+      "label": "Ascendant"
+    },
+    {
+      "id": 21,
+      "name": "Descendant",
+      "color": "var(--kerykeion-chart-color-desc)",
+      "is_active": false,
+      "element_points": 0,
+      "related_zodiac_signs": [],
+      "label": "Descendant"
+    },
+    {
+      "id": 22,
+      "name": "Medium_Coeli",
+      "color": "var(--kerykeion-chart-color-mc)",
+      "is_active": false,
+      "element_points": 0,
+      "related_zodiac_signs": [],
+      "label": "Medium_Coeli"
+    },
+    {
+      "id": 23,
+      "name": "Imum_Coeli",
+      "color": "var(--kerykeion-chart-color-ic)",
+      "is_active": false,
+      "element_points": 0,
+      "related_zodiac_signs": [],
+      "label": "Imum_Coeli"
     }
   ],
 
