--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -32,10 +32,10 @@
         "Uranus": "Uranus",
         "Neptune": "Neptune",
         "Pluto": "Pluto",
-        "Asc": "Asc",
-        "Mc": "Mc",
-        "Dsc": "Dsc",
-        "Ic": "Ic",
+        "Ascendant": "Asc",
+        "Medium_Coeli": "Mc",
+        "Descendant": "Dsc",
+        "Imum_Coeli": "Ic",
         "True_Node": "N. Node (T)",
         "Mean_Node": "N. Node (M)",
         "Chiron": "Chiron",
@@ -76,10 +76,10 @@
         "Uranus": "Uranus",
         "Neptune": "Neptune",
         "Pluto": "Pluton",
-        "Asc": "Asc",
-        "Mc": "Mc",
-        "Dsc": "Dsc",
-        "Ic": "Ic",
+        "Ascendant": "Asc",
+        "Medium_Coeli": "Mc",
+        "Descendant": "Dsc",
+        "Imum_Coeli": "Ic",
         "True_Node": "Nœud N. (V)",
         "Mean_Node": "Nœud N. (M)",
         "True_South_Node": "Nœud S. (V)",
@@ -120,10 +120,10 @@
         "Uranus": "Urano",
         "Neptune": "Netuno",
         "Pluto": "Plutão",
-        "Asc": "Asc",
-        "Mc": "Mc",
-        "Dsc": "Dsc",
-        "Ic": "Ic",
+        "Ascendant": "Asc",
+        "Medium_Coeli": "Mc",
+        "Descendant": "Dsc",
+        "Imum_Coeli": "Ic",
         "True_Node": "Nodo N. (V)",
         "Mean_Node": "Nodo N. (M)",
         "True_South_Node": "Nodo S. (V)",
@@ -164,10 +164,10 @@
         "Uranus": "Urano",
         "Neptune": "Nettuno",
         "Pluto": "Plutone",
-        "Asc": "Asc",
-        "Mc": "Mc",
-        "Dsc": "Dsc",
-        "Ic": "Ic",
+        "Ascendant": "Asc",
+        "Medium_Coeli": "Mc",
+        "Descendant": "Dsc",
+        "Imum_Coeli": "Ic",
         "True_Node": "Nodo N. (V)",
         "Mean_Node": "Nodo N. (M)",
         "True_South_Node": "Nodo S. (V)",
@@ -208,10 +208,10 @@
         "Uranus": "天王星",
         "Neptune": "海王星",
         "Pluto": "冥王星",
-        "Asc": "上升點",
-        "Mc": "上中天",
-        "Dsc": "下降點",
-        "Ic": "下中天",
+        "Ascendant": "上升點",
+        "Medium_Coeli": "上中天",
+        "Descendant": "下降點",
+        "Imum_Coeli": "下中天",
         "True_Node": "真北交点",
         "Mean_Node": "平均北交点",
         "True_South_Node": "真南交点",
@@ -252,10 +252,10 @@
         "Uranus": "Urano",
         "Neptune": "Neptuno",
         "Pluto": "Plutón",
-        "Asc": "Asc",
-        "Mc": "Mc",
-        "Dsc": "Dsc",
-        "Ic": "Ic",
+        "Ascendant": "Asc",
+        "Medium_Coeli": "Mc",
+        "Descendant": "Dsc",
+        "Imum_Coeli": "Ic",
         "True_Node": "Nodo N. (V)",
         "Mean_Node": "Nodo N. (M)",
         "True_South_Node": "Nodo S. (V)",
@@ -296,10 +296,10 @@
         "Uranus": "Уран",
         "Neptune": "Нептун",
         "Pluto": "Плутон",
-        "Asc": "Асц",
-        "Mc": "MC",
-        "Dsc": "ДСЦ",
-        "Ic": "IC",
+        "Ascendant": "Асц",
+        "Medium_Coeli": "MC",
+        "Descendant": "ДСЦ",
+        "Imum_Coeli": "IC",
         "True_Node": "С. Узел (И)",
         "Mean_Node": "С. Узел (С)",
         "True_South_Node": "Ю. Узел (И)",
@@ -340,10 +340,10 @@
         "Uranus": "Uranüs",
         "Neptune": "Neptün",
         "Pluto": "Plüton",
-        "Asc": "Yükselen",
-        "Mc": "MC",
-        "Dsc": "İK",
-        "Ic": "IC",
+        "Ascendant": "Yükselen",
+        "Medium_Coeli": "MC",
+        "Descendant": "İK",
+        "Imum_Coeli": "IC",
         "True_Node": "K. Düğümü (T)",
         "Mean_Node": "K. Düğümü (M)",
         "Chiron": "Kirony",
@@ -384,10 +384,10 @@
         "Uranus": "Uranus",
         "Neptune": "Neptun",
         "Pluto": "Pluto",
-        "Asc": "Asz",
-        "Mc": "MC",
-        "Dsc": "DSC",
-        "Ic": "IC",
+        "Ascendant": "Asz",
+        "Medium_Coeli": "MC",
+        "Descendant": "DSC",
+        "Imum_Coeli": "IC",
         "True_Node": "Nordknoten (T)",
         "Mean_Node": "Nordknoten (M)",
         "True_South_Node": "Südknoten (T)",
@@ -428,10 +428,10 @@
         "Uranus": "यूरेनस",
         "Neptune": "नेपच्यून",
         "Pluto": "प्लूटो",
-        "Asc": "आस",
-        "Mc": "एमसी",
-        "Dsc": "डीएससी",
-        "Ic": "आईसी",
+        "Ascendant": "आस",
+        "Medium_Coeli": "एमसी",
+        "Descendant": "डीएससी",
+        "Imum_Coeli": "आईसी",
         "True_Node": "उत्तर नोड (T)",
         "Mean_Node": "उत्तर नोड (M)",
         "Chiron": "किरोन",
@@ -651,7 +651,7 @@
     },
     {
       "id": 13,
-      "name": "First_House",
+      "name": "Ascendant",
       "color": "var(--kerykeion-chart-color-first-house)",
       "is_active": true,
       "element_points": 40,
@@ -660,7 +660,7 @@
     },
     {
       "id": 14,
-      "name": "Tenth_House",
+      "name": "Medium_Coeli",
       "color": "var(--kerykeion-chart-color-tenth-house)",
       "is_active": true,
       "element_points": 20,
@@ -669,7 +669,7 @@
     },
     {
       "id": 15,
-      "name": "Seventh_House",
+      "name": "Descendant",
       "color": "var(--kerykeion-chart-color-seventh-house)",
       "is_active": false,
       "element_points": 0,
@@ -678,7 +678,7 @@
     },
     {
       "id": 16,
-      "name": "Fourth_House",
+      "name": "Imum_Coeli",
       "color": "var(--kerykeion-chart-color-fourth-house)",
       "is_active": false,
       "element_points": 0,
@@ -711,42 +711,6 @@
       "element_points": 0,
       "related_zodiac_signs": [],
       "label": "True_South_Node"
-    },
-    {
-      "id": 20,
-      "name": "Asc",
-      "color": "var(--kerykeion-chart-color-asc)",
-      "is_active": true,
-      "element_points": 0,
-      "related_zodiac_signs": [],
-      "label": "Asc"
-    },
-    {
-      "id": 21,
-      "name": "Dsc",
-      "color": "var(--kerykeion-chart-color-dsc)",
-      "is_active": false,
-      "element_points": 0,
-      "related_zodiac_signs": [],
-      "label": "Dsc"
-    },
-    {
-      "id": 22,
-      "name": "Mc",
-      "color": "var(--kerykeion-chart-color-mc)",
-      "is_active": false,
-      "element_points": 0,
-      "related_zodiac_signs": [],
-      "label": "Mc"
-    },
-    {
-      "id": 23,
-      "name": "Ic",
-      "color": "var(--kerykeion-chart-color-ic)",
-      "is_active": false,
-      "element_points": 0,
-      "related_zodiac_signs": [],
-      "label": "Ic"
     }
   ],
 
