--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,10 @@ python = "^3.9"
 pyswisseph = "^2.10.3.1"
 pytz = "^2022.7"
 pydantic = "^2.5"
-terminaltables = "^3.1.10"
 scour = "^0.38.2"
 requests-cache = "^1.2.1"
 requests = "^2.32.3"
+simple-ascii-tables = "^0.1.0"
 
 [tool.poetry.scripts]
 create-docs = "scripts.docs:main"
