fixes to make css styles embedded in the object rather than connected as variables

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,9 @@ requests = "^2.32.3"
 simple-ascii-tables = "^1.0.0"
 pytz = "^2024.2"
 typing-extensions = "^4.12.2"
+beautifulsoup4 = "^4.13.3"
+cssutils = "^2.11.1"
+lxml = "^5.3.1"
 
 [tool.poetry.scripts]
 create-docs = "scripts.docs:main"
