--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -16,7 +16,8 @@
       "and_word": "and",
       "transits": "Transits for",
       "type": "Type",
-      "aspects": "Couple aspects",
+      "couple_aspects": "Couple aspects",
+      "transit_aspects": "Transit aspects",
       "planets_and_house": "Points for",
       "transit_name": "At the time of the transit",
       "lunar_phase": "Lunar phase",
@@ -111,7 +112,8 @@
       "and_word": "et",
       "transits": "Transites pour",
       "type": "Type",
-      "aspects": "Les aspects",
+      "couple_aspects": "Les aspects",
+      "transit_aspects": "Les aspects de transit",
       "planets_and_house": "Points pour",
       "transit_name": "Au moment de la transition",
       "lunar_phase": "Phase Lunaire",
@@ -206,7 +208,8 @@
       "and_word": "e",
       "transits": "Trânsitos para",
       "type": "Tipo",
-      "aspects": "Aspectos do casal",
+      "couple_aspects": "Aspectos do casal",
+      "transit_aspects": "Aspectos do trânsito",
       "planets_and_house": "Pontos para",
       "transit_name": "No momento do trânsito",
       "lunar_phase": "Fase lunar",
@@ -301,7 +304,8 @@
       "and_word": "e",
       "transits": "Transiti per",
       "type": "Tipo",
-      "aspects": "Aspetti di coppia",
+      "couple_aspects": "Aspetti di coppia",
+      "transit_aspects": "Aspetti di transito",
       "planets_and_house": "Punti per",
       "transit_name": "Al momento del transito",
       "lunar_phase": "Fase lunare",
@@ -396,7 +400,8 @@
       "and_word": "與",
       "transits": "流年合盤",
       "type": "盤型",
-      "aspects": "相位",
+      "couple_aspects": "相位",
+      "transit_aspects": "流年相位",
       "planets_and_house": "行星 與 宫位",
       "transit_name": "流年名稱",
       "lunar_phase": "月相",
@@ -491,7 +496,8 @@
       "and_word": "y",
       "transits": "Tránsitos para",
       "type": "Tipo",
-      "aspects": "Aspectos de la pareja",
+      "couple_aspects": "Aspectos de la pareja",
+      "transit_aspects": "Aspectos de tránsito",
       "planets_and_house": "Puntos para",
       "transit_name": "En el momento del tránsito",
       "lunar_phase": "Fase lunar",
@@ -586,7 +592,8 @@
       "and_word": "и",
       "transits": "Транзиты для",
       "type": "Тип",
-      "aspects": "Аспекты пары",
+      "couple_aspects": "Аспекты пары",
+      "transit_aspects": "Транзитные аспекты",
       "planets_and_house": "Пункты для",
       "transit_name": "В момент транзита",
       "lunar_phase": "Лунная фаза",
@@ -681,7 +688,8 @@
       "and_word": "ve",
       "transits": "Geçişler için",
       "type": "Tür",
-      "aspects": "Çiftin Açılar",
+      "couple_aspects": "Çiftin Açılar",
+      "transit_aspects": "Geçiş Açıları",
       "planets_and_house": "Puanlar için",
       "transit_name": "Geçiş anında",
       "lunar_phase": "Ay Aşaması",
@@ -776,7 +784,8 @@
       "and_word": "und",
       "transits": "Transite für",
       "type": "Typ",
-      "aspects": "Aspekte des Paares",
+      "couple_aspects": "Aspekte des Paares",
+      "transit_aspects": "Transitaspekte",
       "planets_and_house": "Punkte für",
       "transit_name": "Zum Zeitpunkt des Transits",
       "lunar_phase": "Mondphase",
@@ -871,7 +880,8 @@
       "and_word": "और",
       "transits": "गोचर के लिए",
       "type": "प्रकार",
-      "aspects": "जोड़ी के पहलू",
+      "couple_aspects": "जोड़ी के पहलू",
+      "transit_aspects": "गोचर के पहलू",
       "planets_and_house": "अंक के लिए",
       "transit_name": "गोचर के समय",
       "lunar_phase": "चंद्र चरण",
